other string format method